--- a/src/components/cadastros/orgao/FormOrgao.css
+++ b/src/components/cadastros/orgao/FormOrgao.css
@@ -51,11 +51,11 @@
 
 .div-orgao {
   width: 650px;
-  border-radius: 5px;
+  border-radius: 4px;
   background-color: #ffffff;
-  border-radius: 20px;
   border: 50px #4CAF50;
   padding: 20px;
+  box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 }
 
 .div-orgao h3 {
